Added portfolio info. Further css tweaks.

--- a/contact.html
+++ b/contact.html
@@ -35,11 +35,11 @@
                         <!-- Header -->
                         <div class="row">
                             <div class="col-md-12">
-                                <h1>Contact Me</h1>
+                                <h1>Contact</h1>
                                 <hr>
                             </div>
                         </div>
-                    </div>
+                    
                     <!-- Form Section -->
                     <!-- Name -->
                     <div class="form-group">
@@ -61,6 +61,7 @@
                         <div class="col-sm-12 col-md-12">
                             <input class="btn btn-primary" type="submit" value="Submit">
                         </div>                       
+                    </div>
                     </div> 
                 </div>
             </div>
