--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Matt Gasper</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,16 +13,17 @@
     <div class="container-fluid">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <!-- Unable to align brand w/ main content while retaining responsivity -->
             <a class="navbar-brand" href="#">Matt Gasper</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="index.html">About</a></li>
-                    <li><a href="contact.html">contact</a></li>
-                    <li><a href="portfolio.html"></a>Portfolio</li>
-                </ul>
+            <div class="navbar-collapse collapse justify-content-end">
+                <div class="nav navbar-nav align-items-end">
+                    <a class="navLink" href="index.html">About</a>
+                    <a class="navLink" href="contact.html">Contact</a>
+                    <a class="navLink" href="portfolio.html">Portfolio</a>
+                </div>
             </div>
         </nav>
 
@@ -42,10 +43,10 @@
                     <div class="row"></div>
                         <!-- Profile Picture -->
                         <div class="col-sm-12 col-md-4 image">
-                            <img src="assets/images/corgi.jpeg" alt="Placeholder headshot">
+                            <img class="img-fluid" src="assets/images/corgi.jpeg" alt="Placeholder headshot">
                         </div>
                         <!-- Bio -->
-                        <div class="col-sm-12 col-md-8 bio">
+                        <div class="col-sm-12 col-md-6 bio">
                             <p>
                                 Hi, I'm Matt! I'm a junior web developer with a passion for fashion (mostly denim), smashin' (SSB 4 is superior to Melee, don't @ me), and crashin' (usually by 9:30pm). Thanks for checking out my page to learn a little more about me!
                                 <br><br>
