Added links to projects and extra contact info

--- a/contact.html
+++ b/contact.html
@@ -39,28 +39,38 @@
                                 <hr>
                             </div>
                         </div>
-                    
-                    <!-- Form Section -->
-                    <!-- Name -->
-                    <div class="form-group">
-                        <label for="formGroupExampleInput">Name</label>
-                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
-                    </div>
-                    <!-- Email -->
-                    <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                    </div>
-                    <!-- Message -->
-                    <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Message</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                    </div> 
-                    <!-- Submit -->
                     <div class="row">
-                        <div class="col-sm-12 col-md-12">
-                            <input class="btn btn-primary" type="submit" value="Submit">
-                        </div>                       
+                        <div class="col-md-9">
+                            <!-- Form Section -->
+                            <!-- Name -->
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="John Smith">
+                            </div>
+                            <!-- Email -->
+                            <div class="form-group">
+                                <label for="exampleFormControlInput1">Email address</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                            </div>
+                            <!-- Message -->
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Message</label>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div> 
+                            <!-- Submit -->
+                            <div class="row">
+                                <div class="col-sm-12 col-md-12">
+                                    <input class="btn btn-primary" type="submit" value="Submit">
+                                </div>                       
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <h4>Email</h4>
+                            <p>mrgasper27@gmail.com</p>
+                            <hr>
+                            <h4>On the Web</h4>
+                            <p><a href="www.linkedin.com/in/matthew-gasper-930983a7">LinkedIn</a> | <a href="https://github.com/mattypockets/">Github</a></p>
+                        </div>
                     </div>
                     </div> 
                 </div>
