--- a/portfolio.html
+++ b/portfolio.html
@@ -40,30 +40,30 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-4">
-                                <img class="img-fluid" src="assets/images/city.jpeg" alt="Cityscape at night">
-                                <p class="portfolio img-fluid">Hangman</p>
+                                <img src="assets/images/smash.jpg" alt="Super Smash Bros. Cast">
+                                <p class="portfolio"><a href="https://mattypockets.github.io/Word-Guess-Game/">Super Hangman Bros.</a></p>
                             </div>
                             <div class="col-xs-12 col-md-4">
-                                <img class="img-fluid" src="assets/images/coffee.jpeg" alt="Barista pouring a latte">
-                                <p class="portfolio img-fluid">RPG Game</p>
+                                <img src="assets/images/kitchen.jpeg" alt="Kitchen Photo">
+                                <p class="portfolio"><a href="https://c9-recipe-test.herokuapp.com/index.html">ReciKey: Recipe Finder</a></p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-4">
-                                <img class="img-fluid" src="assets/images/computer.jpeg" alt="Computer displaying a spreadsheet">
-                                <p class="portfolio img-fluid">Trivia Game</p>
+                                <img src="assets/images/pokemon.png" alt="Pokemon Red/Blue Starters">
+                                <p class="portfolio"><a href="https://mattypockets.github.io/Giftastic/">Pokemon Gif Finder</a></p>
                             </div>
                             <div class="col-xs-12 col-md-4">
-                                <img class="img-fluid" src="assets/images/skate.jpeg" alt="Cool kid doing a cool skate trick">
-                                <p class="portfolio img-fluid">Rutgers Info Widget</p>
+                                <img src="assets/images/steven.jpg" alt="Steven Universe Cast">
+                                <p class="portfolio"><a href="https://mattypockets.github.io/Unit-4-Game/">Crystal Clicker Game</a></p>
                             </div>
                         </div>
-                        <div class="row">
+                        <!-- <div class="row">
                             <div class="col-xs-12 col-md-4">
                                 <img class="img-fluid" src="assets/images/mountain.jpeg" alt="Mountains">
                                 <p class="portfolio img-fluid">Rock Paper Scissors</p>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
