--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                             <p>mrgasper27@gmail.com</p>
                             <hr>
                             <h4>On the Web</h4>
-                            <p><a href="www.linkedin.com/in/matthew-gasper-930983a7">LinkedIn</a> | <a href="https://github.com/mattypockets/">Github</a></p>
+                            <p><a href="www.linkedin.com/in/matthew-gasper-930983a7">LinkedIn</a> | <a href="https://github.com/mattypockets/">GitHub</a></p>
                         </div>
                     </div>
                     </div> 
